crates/usfm_parser/tests/snapshots/recovery__unmatched_closing_marker.snap
---
source: crates/usfm_parser/tests/recovery.rs
description: "\\id GEN\n\\c 1\n\\p \\v 1 a \\em b\\em* \\em* c \\x* d"
---
Book GEN "" @0..7
ChapterStart 1@8..12
Para p@13..45
  VerseStart 1@16..20
  Text "a "@21..23
  Char em@23..32
    Text "b"@27..28
  Text " c d"@32..45
  VerseEnd 1
ChapterEnd 1
--- diagnostics
error[unmatched-closing-marker] @33..37: closing marker `\em*` has no matching `\em`
error[unmatched-closing-marker] @40..43: closing marker `\x*` has no matching `\x`
