crates/usfm_parser/tests/snapshots/recovery__unmatched_milestone_end.snap
---
source: usfm_parser/tests/recovery.rs
description: "\\id GEN\n\\c 1\n\\p \\v 1 a \\* b"
---
Book GEN "" @0..7
ChapterStart 1@8..12
Para p@13..27
  VerseStart 1@16..20
  Text "a  b"@21..27
  VerseEnd 1
ChapterEnd 1
--- diagnostics
error[unmatched-milestone-end] @23..25: `\*` with no open milestone
