crates/usfm_parser/tests/snapshots/recovery__unterminated_attribute_value.snap
---
source: usfm_parser/tests/recovery.rs
description: "\\id GEN\n\\c 1\n\\p \\v 1 \\w a|lemma=\"x\\w* b"
---
Book GEN "" @0..7
ChapterStart 1@8..12
Para p@13..39
  VerseStart 1@16..20
  Char w@21..37 lemma="x"
    Text "a"@24..25
  Text " b"@37..39
  VerseEnd 1
ChapterEnd 1
--- diagnostics
error[unterminated-attribute-value] @32..33: attribute value is missing its closing `"`
